# logwart

./: .gitignore  Dockerfile  GEMINI.md  README.md  docker-compose.yml
.github/workflows/: docker-build.yml
backend/: Cargo.toml
backend/src/: db.rs  graph.rs  main.rs  parser.rs
example_logs/: stalwart.log.2026-03-30  stalwart.log.2026-03-31  stalwart.log.2026-04-10  stalwart.log.2026-04-16  stalwart.log.2026-04-17  stalwart.log.2026-04-18  stalwart.log.2026-04-19  stalwart.log.2026-04-20  stalwart.log.2026-04-21
frontend/: package-lock.json  package.json
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/components/: auth-provider.tsx  log-table.tsx  login-page.tsx  network-map.tsx
frontend/src/hooks/: use-column-resize.ts  use-log-stream.ts
frontend/src/types/: log.ts
