[package]
name = "backend"
version = "0.1.0"
edition = "2024"

[dependencies]
async-stream = "0.3.6"
axum = "0.8.9"
axum-extra = { version = "0.12.6", features = ["typed-header"] }
dotenvy = "0.15.7"
futures-util = "0.3.32"
headers = "0.4.1"
lazy_static = "1.5.0"
notify = "8.2.0"
regex = "1.12.3"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
sqlx = { version = "0.8.6", features = ["sqlite", "runtime-tokio-rustls", "macros"] }
tokio = { version = "1.52.1", features = ["full"] }
tokio-stream = "0.1.18"
tower-http = { version = "0.6.8", features = ["cors", "fs"] }
tracing = "0.1.44"
tracing-subscriber = "0.3.23"
